@@ -1,5 +1,9 @@
 2008-11-10  David Teller  <David.Teller@univ-orleans.fr>
 
+	* Makefile.in: [config.ml] added
+
+	* configure.ac: [config.ml] removed from dependencies
+
 	* build/odoc_generator_batlib.ml: in main, added warning about length
 
 	* config.ml.in: [documentation_root] now built from [@DOCDIR@]
